--- a/src/LayuiAvaloniaPack/Layui.Main/Views/DialogPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/DialogPage.axaml
@@ -3,14 +3,14 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:dialog="using:LayUI.Avalonia.Dialog"
+    xmlns:global="using:LayUI.Avalonia.Global"
     xmlns:lay="using:LayUI.Avalonia.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <lay:LayDialogHost dialog:LayDialog.Token="DialogPageRoot">
+    <lay:LayDialogHost global:LayDialog.Token="DialogPageRoot">
         <Grid>
             <StackPanel Margin="2" VerticalAlignment="Center">
                 <lay:LayButton
